fix: correção do z-index do modal

--- a/Site/web-data-viz/public/css/style.css
+++ b/Site/web-data-viz/public/css/style.css
@@ -318,6 +318,7 @@ body {
 }
 
 .modal {
+    z-index: 1;
     flex-direction: column;
     background-color: #fbfbfc;
     color: #1b1b1d;
